# contract-handler

./: .gitignore  auth.py  config.py  main.py  pyproject.toml  requirements.txt  utils.py
vercel_fastapi_starter.egg-info/: SOURCES.txt  requires.txt
