[project]
name = "vercel-fastapi-starter"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "cryptography>=46.0.3",
  "fastapi>=0.128.0",
  "httpx>=0.28.1",
  "uvicorn>=0.34.0",
  "pydantic-settings>=2.12.0",
  "PyJWT>=2.10.1",
  "python-dotenv>=1.2.1",
  "dropbox>=12.0.2",
  "reportlab>=4.4.7",
]
